Stop double spacing at the bottom of a 'listing column'

--- a/assets/sass/patterns/molecules/teaser.scss
+++ b/assets/sass/patterns/molecules/teaser.scss
@@ -2,8 +2,8 @@
 
 .teaser {
   border-top: 1px solid $color-text-dividers;
-  @include padding($teaser-spacing-top 0 $teaser-spacing-bottom);
-
+  @include padding($teaser-spacing-top 0 0 0);
+  @include margin($teaser-spacing-bottom, "bottom");
   .listing-list__item:first-child & {
     border-top-style: none;
   }
